--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,5 +6,7 @@ body, html {
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    background-color: #000;
+    /* background-color: #000; */
+    -webkit-font-smoothing: antialiased;
+    background-color: #0A0A0A;
 }
